# MassKV

./: .gitignore  CLAUDE.md  CMakeLists.txt  FlowKV_HybridL1_Innovation_Summary_20260319_095233.md  FlowKV_L1_Hybrid_Progress_20260302_073800.md  FlowKV_L1_Hybrid_V3_Progress_20260303_090524.md  FlowKV_L1_Hybrid_V4_Progress_20260306_073226.md  FlowKV_L1_Hybrid_V5_Progress_20260310_085023.md  FlowKV_L1_Hybrid_V6_Progress_20260313_122056.md  FlowKV_L1_Hybrid_V7_Progress_20260319_055209.md  FlowKV_Read_Path_Detailed_20260308_124958.md  FlowKV_项目报告.md  README.md  README_CN.md  l1_hybrid_bptree_design.md  l1_hybrid_bptree_design_v2.md  l1_hybrid_bptree_design_v3.md  l1_hybrid_bptree_design_v4.md  l1_hybrid_bptree_design_v5.md  l1_hybrid_bptree_design_v6.md  l1_hybrid_bptree_design_v7.md  run_leafonly_bg.sh
benchmark_pools/: BENCHMARK_REPORT.md  OLD_O_DIRECT_REPORT.md  comprehensive_benchmark.cpp  run_all_tests.sh  run_comprehensive_benchmark.sh
benchmarks/: CMakeLists.txt  simple_benchmark.cpp
claude_kv/: README.md  design_streaming_flush.md  design_swap_threshold.md  design_swap_v2.md  design_v7_current.md  lessons.md  paper_story.md  progress.md
claude_kv/memory/: feedback_post_code_change_tests.md
db/: datablock_reader.cpp  datablock_reader.h  datablock_writer.cpp  datablock_writer.h  db.cpp  db_client.cpp  log_reader.cpp  log_reader.h  log_writer.cpp  log_writer.h  pst_builder.cpp  pst_builder.h  pst_deleter.cpp  pst_deleter.h  pst_reader.cpp  pst_reader.h  record_iterator.h  table.h
db/allocator/: bitmap.h  segment.h  segment_allocator.h
db/blocks/: fixed_size_block.h
db/compaction/: compaction.cpp  compaction.h  flush.cpp  flush.h  manifest.cpp  manifest.h  version.cpp  version.h
docs/: Code Citations.md  cold_restart_memory_limited_report.md  cold_start_progress.md  db_architecture.md  hmasstree_architecture.md  hmasstree_benchmark_report.md  hmasstree_external_dev_log.md  hmasstree_external_roadmap.md  hmasstree_external_storage_design.md  hmasstree_external_todo.md  hmasstree_handle_only_analysis.md  hmasstree_memory_analysis.md  hmasstree_test_guide.md  include_api_spec.md  key16_migration_log.md  masstree_architecture.md  索引结构.md  随笔.md
experiments/: CMakeLists.txt  README.md
experiments/ablation_studies/: README.md
experiments/ablation_studies/01_no_prefix_routing/: README.md
experiments/ablation_studies/02_no_cow/: README.md
experiments/ablation_studies/03_no_parallel_range_scan/: README.md
experiments/ablation_studies/04_no_bucket_governance/: README.md
experiments/ablation_studies/05_b1_vs_b2/: README.md
experiments/common/: README.md  fast_bulk_l1_builder.cpp  fast_bulk_l1_builder.h
experiments/correctness_regression/: CMakeLists.txt  README.md
experiments/correctness_regression/01_end_to_end_semantics/: CMakeLists.txt  README.md  correctness_e2e_semantics_stress.cpp
experiments/correctness_regression/02_structure_consistency/: CMakeLists.txt  README.md  l1_structure_consistency_regression.cpp
experiments/correctness_regression/03_long_running_cycles/: CMakeLists.txt  README.md  l1_long_running_cycle_regression.cpp
experiments/correctness_regression/04_differential_regression/: CMakeLists.txt  README.md  l1_differential_regression.cpp
experiments/performance_evaluation/: CMakeLists.txt  README.md
experiments/performance_evaluation/01_point_lookup/: CMakeLists.txt  README.md  generate_point_lookup_report.py  plot_point_lookup_results.py  point_lookup_benchmark.cpp  run_point_lookup_batch.py
experiments/performance_evaluation/02_range_query/: README.md
experiments/performance_evaluation/03_compaction_update/: CMakeLists.txt  README.md  generate_write_online_report.py  plot_write_online_results.py  reopen_steady_rss_benchmark.cpp  run_200m_periodic_sampling.sh  run_200m_phase2_compare_flush1.sh  run_phase2_acceptance.sh  run_write_online_batch.py  write_online_benchmark.cpp
experiments/performance_evaluation/04_space_overhead/: README.md
experiments/performance_evaluation/05_recovery_runtime/: README.md
experiments/performance_evaluation/06_long_running_mixed/: README.md
include/: config.h  db.h  db_common.h  log_format.h  slice.h
lib/: index_hmasstree.h  index_hmasstree_external.h  index_hot.h  index_masstree.h
lib/hmasstree/: benchmark_comparison.cpp  benchmark_comparison_v2.cpp  btree_leaflink.hh  external_index.h  external_node.h  hmasstree_test.cpp  hmasstree_wrapper.cc  hmasstree_wrapper.h  index_storage.cpp  index_storage.h  kvthread.cc  masstree.hh  masstree_get.hh  masstree_insert.hh  masstree_print.hh  masstree_remove.hh  masstree_scan.hh  masstree_scan2.hh  masstree_split.hh  masstree_struct.hh  memory_limited_test.cpp  node_cache.cpp  node_cache.h  node_factory.h  node_handle.h  node_resolver.h  node_resolver_fwd.h  node_serializer.h  nodeversion.hh  run_benchmark_comparison.sh  run_benchmark_v2.sh  run_cold_restart_test.sh  run_cold_start_test.sh  run_cold_start_test_v2.sh  run_handle_only_test.sh  run_memory_limited_test.sh  run_test.sh  scan_context.h  test_components.cpp  test_external_storage.cpp  (+1 more)
lib/hybrid_l1/: l1_delta_batch.h  l1_hybrid_index.cc  l1_hybrid_index.h  l1_hybrid_rebuilder.cc  l1_hybrid_rebuilder.h  normal_pack.cc  normal_pack.h  prefix_suffix.h  route_cold_leaf.h  route_descriptor.h  route_layout.cc  route_layout.h  route_partition.h  subtree_bptree.cc  subtree_bptree.h  subtree_page.cc  subtree_page.h  subtree_page_store.cc  subtree_page_store.h  subtree_record.h
lib/masstree/: kvthread.cc  kvthread.hh  masstree_get.hh  masstree_scan.hh  masstree_scan2.hh  masstree_wrapper.h  nodeversion.hh
tests/: CMakeLists.txt  db_delete_correctness_smoke_test.cpp  db_l1_recovery_smoke_test.cpp  db_l1_route_smoke_test.cpp  hybrid_l1_test.cpp  manifest_batch_txn_replay_test.cpp  manifest_durable_crash_fuzz_test.cpp  manifest_durable_crash_recovery_smoke_test.cpp  manifest_l1_snapshot_test.cpp  version_l1_selection_test.cpp
util/: atomic_vector.h  binary_search.h  lock.h
